--- a/index.html
+++ b/index.html
@@ -29,20 +29,68 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html"><img src="images/logo.png"></a>
+          <a class="navbar-brand" href="index.html"><img src="images/logo.png" class="logo"></a>
         </div>
 				<div class="collapse navbar-collapse navbar-right">
           <ul class="nav navbar-nav">
-            <li class="scroll active"><a href="#home">Home</a></li>
-            <li class="scroll"><a href="#portfolio">Portfolio</a></li>
-            <li class="scroll"><a href="#about">About</a></li>
-            <li class="scroll"><a href="#contact">Contact</a></li>                        
+            <li class="nav active"><a href="#home">Home</a></li>
+            <li class="nav"><a href="#portfolio">Portfolio</a></li>
+            <li class="nav"><a href="#about">About</a></li>
+            <li class="nav"><a href="#contact">Contact</a></li>                        
           </ul>
         </div>
       </div><!--/.container-->
     </nav><!--/nav-->
   </header><!--/header-->
+  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active" style="	background-image: url(images/slider/bg1.jpg);">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6">
+            <div class="carousel-content contenido">
+              <h1><span>Multi</span> is the best Onepage html template</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et  dolore magna incididunt ut labore aliqua. </p>
+              <a class="btn btn-primary btn-lg" href="#">Read More</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="item" style="background-image: url(images/slider/bg2.jpg);">
+	    <div class="container">
+	      <div class="row">
+	        <div class="col-sm-6">
+	          <div class="carousel-content contenido">
+	            <h1>Beautifully designed <span>free</span> one page template</h1>
+	            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et  dolore magna incididunt ut labore aliqua. </p>
+	            <a class="btn btn-primary btn-lg" href="#">Read More</a>
+	          </div>
+	        </div>
+	      </div>
+	    </div>
+ 		 </div>
+	  <!-- Controls -->
+	  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+	    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+	    <span class="sr-only">Previous</span>
+	  </a>
+	  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+	    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+	    <span class="sr-only">Next</span>
+	  </a>
+	</div>
    
+  <section id="portafolio">
+    <div class="container">
+      <div class="section-header">
+        <h2 class="section-title text-center wow fadeInDown">Our Works</h2>
+        <p class="text-center wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
+      </div>
+    </div><!--/.container-->
+  </section><!--/#portfolio-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
