--- a/index.html
+++ b/index.html
@@ -91,6 +91,76 @@
       </div>
     </div><!--/.container-->
   </section><!--/#portfolio-->
+
+  <section id="get-in-touch">
+    <div class="container">
+      <div class="section-header">
+        <h2 class="section-title text-center wow fadeInDown">Get in Touch</h2>
+        <p class="text-center wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
+      </div>
+    </div>
+  </section><!--/#get-in-touch-->
+
+  <section id="contact">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d15603.243744119041!2d-77.03917530000001!3d-12.1250849!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2spe!4v1447278600527" width="100%" height="700" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <div class="container-wrapper">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4 col-sm-offset-8">
+            <div class="contact-form">
+              <h3>Contact Info</h3>
+ 							<address>
+                <strong>Twitter, Inc.</strong><br>
+                795 Folsom Ave, Suite 600<br>
+                San Francisco, CA 94107<br>
+                <abbr title="Phone">P:</abbr> (123) 456-7890
+              </address>
+
+              <form id="main-contact-form" name="contact-form" method="post" action="#">
+                <div class="form-group">
+                  <input type="text" name="name" class="form-control" placeholder="Name" required>
+                </div>
+                <div class="form-group">
+                   <input type="email" name="email" class="form-control" placeholder="Email" required>
+                </div>
+                <div class="form-group">
+                  <input type="text" name="subject" class="form-control" placeholder="Subject" required>
+                </div>
+                <div class="form-group">
+                  <textarea name="message" class="form-control" rows="8" placeholder="Message" required></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Send Message</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section><!--/#bottom-->
+
+    <footer id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    &copy; 2014 Your Company. Designed by <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">ShapeBootstrap</a>
+                </div>
+                <div class="col-sm-6">
+                    <ul class="social-icons">
+                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
+                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                        <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                        <li><a href="#"><i class="fa fa-flickr"></i></a></li>
+                        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="#"><i class="fa fa-github"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer><!--/#footer-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
